# KOSH

./: .env.example  .gitignore  README.md  docker-compose.yml  package.json  pnpm-lock.yaml
.github/workflows/: release.yml
apps/api/: .env.example  README.md  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/app/: main.py  seed.py
apps/api/app/api/routes/: auth.py  contributions.py  dashboard.py  members.py  reports.py
apps/api/app/core/: config.py  deps.py  security.py
apps/api/app/db/: session.py
apps/api/app/models/: __init__.py  audit_log.py  contribution.py  user.py
apps/api/app/schemas/: auth.py  contributions.py  dashboard.py  members.py
apps/api/app/services/: audit.py  google.py  google_sheet_db.py  storage.py
apps/web/: .env.example  next.config.ts  package.json  tailwind.config.ts
apps/web/app/: globals.css  layout.tsx
apps/web/app/api/auth/google/callback/: route.ts
apps/web/app/api/auth/google/finish/: page.tsx
apps/web/app/auth/google/callback/: route.ts
apps/web/app/contributions/: page.tsx
apps/web/app/contributions/new/: page.tsx
apps/web/app/dashboard/: page.tsx
apps/web/app/login/: page.tsx
apps/web/app/members/: page.tsx
apps/web/app/providers/: page.tsx
apps/web/app/reports/monthly/: page.tsx
apps/web/app/settings/: page.tsx
apps/web/components/: app-shell.tsx  stat-card.tsx
apps/web/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  select.tsx  table.tsx  textarea.tsx
apps/web/lib/: api.ts  types.ts  utils.ts
apps/web/middleware.ts/: page.ts
