[project]
name = "coop-saving-api"
version = "0.1.0"
description = "FastAPI backend for a small COOP saving system"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "psycopg2-binary>=2.9.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "email-validator>=2.2.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "google-api-python-client>=2.140.0",
    "google-auth>=2.33.0",
    "bcrypt==4.0.1",
]

[tool.uv]
package = false
